# caseforge-studio

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
caseforge/: __init__.py  cli.py  markdown.py  models.py  pipeline.py  providers.py  server.py  service.py  storage.py  utils.py
caseforge/web/: app.js  index.html  styles.css
docs/: opsforge-module-contract.json
docs/demo/: README.md
docs/screenshots/: README.md
examples/: sample-blueprint.md  sample-dossier.md
examples/briefs/: ai-interview-coach.md  ai-ops-copilot.md  intralogistics-commissioning-planner.md  ops-copilot.md
scripts/: run_demo.ps1
tests/: test_caseforge.py  test_opsforge_module_contract.py
